# meridian-core

./: .env.demo  .env.example  .env.meridian.example  .gitignore  CLAUDE.md  DEPLOY_STATUS.md  DESIGN.md  Dockerfile  FEEDBACK.md  FEEDBACK_UNISWAP.md  INJECTION_POINTS.md  KEYS_NEEDED.md  LESSONS.md  Makefile  README.md  SPONSORS.md  SWARM_ENS_PROVENANCE.md  SWARM_UPGRADE.md  compose.override.yml  next.config.mjs  package-lock.json  package.json  turbo.json
services/: README.md  pyproject.toml
services/_shared/: circle_dcw.py  db.py  smoke_circle_dcw.py
services/cogito/: .gitignore  README.md  package.json  tsconfig.json
services/cogito/scripts/: smoke_fhe.ts
services/cogito/src/: bridge.ts  compute.ts  fhe.ts  gatewayChains.ts  index.ts  (+1 more)
services/execution_router/: TENANTS.md  __init__.py  api.py  attestation.py  audit.py  bridge_client.py  burner.py  capital.py  clob_client.py  daily_pack.py  encryptor.py  hook_client.py  keeperhub.py  polygon_funding.py  store.py  tenants.py  terminal_ticker.py  test_daily_pack_smoke.py  test_tenants_smoke.py  treasury_transfer.py
services/meridian_signal/: __init__.py  _dns_fallback.py  api.py  backtest.py  cryo.py  entropy.py  kalshi.py  matcher.py  polymarket.py  seed.py  sse.py  swarm.py  topology.py  zg_client.py
services/orchestrator/: __init__.py  __main__.py  allocator.py  encryptor.py  loop.py  reconciler.py  risk.py  test_arb_smoke.py  test_encryptor_smoke.py  test_risk_smoke.py  test_strategies_smoke.py
services/swarm_runner/: README.md  agent.py  axl_client.py  nodes.py  orchestrator.py  test_cross_node.py
(+181 files in other folders)
